--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    implementation 'com.mikhaellopez:circularimageview:3.2.0'
+
+
 
 
 
