--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,7 +60,7 @@ dependencies {
     implementation 'com.github.gayanvoice:android-animations-kotlin:1.0.1'
     implementation 'com.daimajia.androidanimations:library:2.4@aar'
 
-
+    compile 'com.itextpdf:itextg:5.5.10'
 
 
 
