--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     package="com.amroz.ystore">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -14,37 +14,27 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Dashboard">
-        </activity>
-        <activity android:name=".MoreDetails"></activity>
-        <activity android:name=".ProductByCat"></activity>
-        <activity android:name=".MainActivity">
-
-        </activity>
-        <activity android:name=".Splash.Splash">
+        <activity android:name=".UserReports">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Mangs_Delete">
+        <activity android:name=".Dashboard"></activity>
+        <activity android:name=".MoreDetails" />
+        <activity android:name=".ProductByCat" />
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".Splash.Splash">
 
         </activity>
-        <activity android:name=".LoginActivity"></activity>
-        <activity android:name=".UpdateProduct">
-
-        </activity>
-        <activity android:name=".Fragments.UpdateProfile"></activity>
-
-        <activity android:name=".AddCartActivity">
-
-        </activity>
-        <activity android:name=".AddProductActivity" >
-        </activity>
-        <activity android:name=".AddCategoryActivity" >
-
-        </activity>
+        <activity android:name=".Mangs_Delete"></activity>
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".UpdateProduct"></activity>
+        <activity android:name=".Fragments.UpdateProfile" />
+        <activity android:name=".AddCartActivity"></activity>
+        <activity android:name=".AddProductActivity"></activity>
+        <activity android:name=".AddCategoryActivity"></activity>
     </application>
 
 </manifest>
