--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,18 +19,21 @@
         <activity android:name=".Chating.ChatPageActivity" />
         <activity android:name=".Chating.ContactsActivity" />
         <activity android:name=".Chating.MainChatActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".Chating.ChatActivity" />
         <activity android:name=".ChatingActivity"></activity>
         <activity android:name=".Dashboard" />
         <activity android:name=".MoreDetails" />
         <activity android:name=".ProductByCat" />
-        <activity android:name=".MainActivity" />
+        <activity android:name=".MainActivity">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+
+        </activity>
         <activity android:name=".Splash.Splash" />
         <activity android:name=".Mangs_Delete" />
         <activity android:name=".LoginActivity" />
