--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,12 +16,20 @@
         android:usesCleartextTraffic="true">
 
         <activity android:name=".product_report"></activity>
-        <activity android:name=".UserReport" />
+        <activity android:name=".UserReport"/>
+
         <activity android:name=".Dashboard" />
         <activity android:name=".MoreDetails" />
         <activity android:name=".ProductByCat" />
-        <activity android:name=".MainActivity" />
-        <activity android:name=".Splash.Splash">
+        <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+
 
         <activity android:name=".Adding.AddUser"></activity>
         <activity android:name=".Chating.ContactsActivity" />
@@ -31,19 +39,10 @@
 
         <activity android:name=".Chating.ChatActivity" />
         <activity android:name=".ChatingActivity"></activity>
-        <activity android:name=".Dashboard" />
-        <activity android:name=".MoreDetails" />
-        <activity android:name=".ProductByCat" />
-
-        <activity android:name=".MainActivity" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+        <activity android:name=".Splash.Splash">
 
         </activity>
-        <activity android:name=".Splash.Splash" />
+
         <activity android:name=".Mangs_Delete" />
         <activity android:name=".LoginActivity" >
 
