--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,12 +66,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:17.1.0'
 
 
-    compile 'com.itextpdf:itextg:5.5.10'
-
     //Firebase-UI
     implementation 'com.firebaseui:firebase-ui-auth:4.2.0'
     implementation 'com.firebaseui:firebase-ui-firestore:4.2.0'
     implementation 'androidx.core:core-ktx:1.0.0'
+    implementation 'com.itextpdf:itext7-core:7.1.11'
 
 
 
