--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,6 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".CatDashbourdActivity"></activity>
         <activity android:name=".product_report" />
         <activity android:name=".UserReport" />
         <activity android:name=".Dashboard" />
@@ -41,6 +40,7 @@
         <activity android:name=".AddCartActivity" />
         <activity android:name=".AddProductActivity" />
         <activity android:name=".AddCategoryActivity" />
+        <activity android:name=".UserReports"></activity>
     </application>
 
 </manifest>
