--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,11 @@
         android:usesCleartextTraffic="true">
         <activity android:name=".FavoriteActivity"></activity>
         <activity android:name=".Intro.IntroActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".Payment.CheckoutActivity" />
         <activity android:name=".UserReport" />
