--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'com.squareup.picasso:picasso:2.5.2'
+
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
@@ -74,6 +74,8 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.0.0'
     implementation 'com.itextpdf:itext7-core:7.1.11'
     implementation 'com.balysv:material-ripple:1.0.2'
+    implementation 'com.github.denzcoskun:ImageSlideshow:0.0.6'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
 
 
